--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
         "endOfLine": "auto"
       }
     ],
-    "linebreak-style":0,
+    // "linebreak-style":0,
     "semi": ["error", "always"],
     "curly": ["warn", "multi"],
     "quotes": ["error", "single", { "avoidEscape": true }],
