--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,11 @@
 # Preview URL
 NEXT_PUBLIC_URL=https://$NEXT_PUBLIC_VERCEL_URL
+
+# Firebase
+NEXT_PUBLIC_API_KEY=AIzaSyB1fcV0mVd8xqCi_YBgxvygtC99DtX70kw
+NEXT_PUBLIC_AUTH_DOMAIN=test-d7e06.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=test-d7e06
+NEXT_PUBLIC_STORAGE_BUCKET=test-d7e06.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=689929442356
+NEXT_PUBLIC_APP_ID=1:689929442356:web:692797c8d4b2b82a3ca661
+NEXT_PUBLIC_MEASUREMENT_ID=G-0H9BJMMMFW
