--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,12 +19,11 @@
     }
   },
   "rules": {
-    // "linebreak-style":0,
     "semi": ["error", "always"],
     "curly": ["warn", "multi"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "jsx-quotes": ["error", "prefer-single"],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": "off",
     "no-console": "warn",
     "comma-dangle": ["error", "never"],
     "no-unused-expressions": "error",
